[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ballsdex-report"
version = "0.0.0"

description = "A standardized report system for Ballsdex 3.0 allowing users to submit bugs, violations, and suggestions"
license = "Apache-2.0"
authors = [
    { name = "Ray Hsueh", email = "ray.hsueh.founder@gmail.com" },
]
readme = "README.md"

dependencies = [
    "ballsdex",
]
